sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: not found: value echanger
      if(plusPetit(i+ecart, i)) echanger(i, i+ecart);
                                ^